# pileus

exeter_vpn/: exeter.config  install_alpine_stuff.sh  install_ubuntu_stuff.sh  setup_alpine.sh  setup_ubuntu.sh  setup_via_client.sh  start_via_vpn.sh  start_vm.sh
firedrake/: standard_firedrake_build.sh  standard_variables
petsc/: install_petsc.sh  readme.md
pileustop/: block.py  display.py  licence.txt  mpiwrapper.py  nmin_test.py  pileustop.py  process.py  pyproject.toml  readme.md
pileustop/pileustop/: display.py  mpiwrapper.py  pileustop.py
pileustop/scripts/: block.py  issue.py  nmin_test.py
spack/: basic_packages.sh  setup_spack.sh
system/: packages.sh
